--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "ldap/KerberosUserEnum"]
 	path = ldap/KerberosUserEnum
 	url = https://github.com/QAX-A-Team/KerberosUserEnum.git
+[submodule "mobile/koroni"]
+	path = mobile/koroni
+	url = https://github.com/DeepSociety/koroni.git
