--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "network/nmapAutomator"]
 	path = network/nmapAutomator
 	url = https://github.com/21y4d/nmapAutomator.git
+[submodule "web/CrimeFlare"]
+	path = web/CrimeFlare
+	url = https://github.com/zidansec/CrimeFlare.git
