--- a/.gitmodules
+++ b/.gitmodules
@@ -172,3 +172,6 @@
 [submodule "web/vaf"]
 	path = web/vaf
 	url = https://github.com/d4rckh/vaf.git
+[submodule "waybackurls"]
+	path = waybackurls
+	url = https://github.com/tomnomnom/waybackurls.git
