--- a/.gitmodules
+++ b/.gitmodules
@@ -173,5 +173,5 @@
 	path = web/vaf
 	url = https://github.com/d4rckh/vaf.git
 [submodule "waybackurls"]
-	path = waybackurls
+	path = osint/waybackurls
 	url = https://github.com/tomnomnom/waybackurls.git
