--- a/.gitmodules
+++ b/.gitmodules
@@ -175,3 +175,6 @@
 [submodule "waybackurls"]
 	path = osint/waybackurls
 	url = https://github.com/tomnomnom/waybackurls.git
+[submodule "web/Arjun"]
+	path = web/Arjun
+	url = https://github.com/s0md3v/Arjun.git
