add nuclei templates

--- a/.gitmodules
+++ b/.gitmodules
@@ -211,3 +211,6 @@
 [submodule "osint/subbrute"]
 	path = osint/subbrute
 	url = https://github.com/TheRook/subbrute.git
+[submodule "web/nuclei-templates"]
+	path = web/nuclei-templates
+	url = https://github.com/projectdiscovery/nuclei-templates.git
